@@ -1,5 +1,6 @@
 v. 1.3.0
 ========
+Add the TokenProvider abstract class => and StaticTokenProvider, UsernamePasswordTokenProvider
 Introduce CHANGES file.
 Allow delete_many({}) with empty filter
 Implement include_sort_vector option to Collection.find and get_sort_vector to cursors
